--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,99 +1,133 @@
-body{
-	background: #d7dadf;
-	
-}
-*{
-	box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
 
-/******************************
-Header
-*******************************/
-.header{
-	display: none;
-	height: 70px;
+body {
+    background-image: url(../images/annie-spratt-PM4Vu1B0gxk-unsplash.jpg);
+    font-family: ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    min-height: 100vh;
+}
+
+.container {
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 3px 50px 0 rgba(0, 0, 0, 0.2), 0 1px 50px 0 rgba(0, 0, 0, 0.19);
+    width: 700px;
+    padding: 20px;
+}
+
+.container h2 {
+    margin-bottom: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
-	justify-content: space-between;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: rgb(4, 100, 4);
 }
 
-header h1{
-	margin: 20px;
-	font-size: 2em;
-	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-header h2{
-	margin: 20px;
-	font-size: 1em;
-	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-/******************************
-Body
-*******************************/
-.form-body{
-	margin: 0 auto;
-	background: white;
-	width: 80%;
-	border-radius: 20px;
-	padding: 30px;
-	margin: 50px 50px 50px 85px;
-	box-shadow: ;
-}
 form{
-	display: flex;
-	flex-wrap: wrap;
-}
-.form-item{
-	margin-bottom: 20px;
-	width: 100%;
-}
-@media screen and (min-width: 481px) {
-	.form-item{
-		margin-bottom: 20px;
-		width: 50%;
-	}
-}
-@media screen and (min-width: 970px) {
-	.form-item{
-		margin-bottom: 20px;
-		width: 33.33%;
-	}
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-div > form label{
-	display: block;
-	width: 100%;
-	margin-right: 20px;
+.form-item {
+    width: 48%;
+    margin: 5px 0;
 }
-form input, select {
+
+.form-item label {
+    color: green; 
+}
+
+.form-item input, select {
+    display: block;
+    border: 8px solid  black;
 	border-radius: 10px;
 	border-width: 1px;
-	padding-left: 10px;
-	width: 80%;
-	height: 25px;
-	border-color: #998483;
-	box-shadow: ;
+	padding: 10px; 
+	width: 100%;
+	height: 32px;
+    margin: 2px 0;
+    font-size: 14px;
 }
 
-@media screen and (min-width: 970px) {
-	
+.form-item input:focus {
+    outline: 0
 }
 
-/******************************
-Footer
-*******************************/
-footer{
-	
-	height: 70px;
-    text-align: center;
-	margin-top: 80px;
+.form-item.success input {
+    border: 2px solid green;
 }
-ul{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	flex-;
+
+.form-item.error input {
+    border: 2px solid red;
 }
-/* ul li{
-	display: flex;
-} */
+
+.form-item small {
+    color: red;
+    display: none;
+    /* position: absolute;
+    bottom: 0;
+    left: 0; */
+}
+
+.form-item.error small {
+    display: block;
+}
+
+.btn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.btn button{
+    display: flex;
+    cursor: pointer;
+    border: 0;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    padding: 8px;
+    margin-top: 10px;
+    justify-content: center;
+    align-self: center;
+}
+
+.btn button:hover {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.7), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
+}
+
+.btn .submit{
+    background-color: green;
+    margin-right: 10px;
+}
+
+.btn .back{
+    background-color: red;
+}
+
+@media screen and (max-width: 850px){
+    .container{
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    
+}
+@media screen and (max-width: 500px){
+    form{
+      flex-direction: column;
+    }
+    .container{
+        margin: 20% 20px;
+    }
+    .form-item {
+        width: 100%;
+        margin: 5px 0;
+    }
+}
+
