--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: url(../images/annie-spratt-PM4Vu1B0gxk-unsplash.jpg);
-    font-family: ;
+    /* font-family: ; */
     display: flex;
     align-items: center;
     justify-content: center;
